--- a/style.css
+++ b/style.css
@@ -31,10 +31,15 @@ body{
     background-color: #E02C6D;
     width: 168px;
     height: 44px;
+    transition: background-color 2s;   /*transition*/
+}
+.header-link:hover{
+    background-color: orangered;
 }
 .header-link p:hover{
     transform: scale(1.2);   /*transform*/
     font-weight: 600;
+   
 }
 .header-image img{
     width: 556.01px;
@@ -124,7 +129,7 @@ body{
     background-repeat: no-repeat;
     background-position:100%;
     height: 810px;
-    padding-left: 500px;
+    padding-left: 465px;
     margin: 20px;
 }
 .bonus h2{
@@ -173,7 +178,7 @@ hr{
 .news-title h1{
     text-align: center;
     padding-top: 80px;
-    padding-bottom: 10px;
+    font-size: 50px;
 }
 hr{
     border: 1px solid gray;
@@ -182,11 +187,16 @@ hr{
 .tournaments{
     display: grid;
     grid-template-columns: repeat(3,1fr);
+    grid-column-gap:8px;
     padding-left: 180px;
     padding-bottom: 50px;
+}
+.tournament p{
+    font-size: 14px;
 }
 .tournament button{
     font-weight: 800;
     box-shadow: 1px 1px 8px red;
 }
+
 
